<resources>
    <string name="app_name">FuelManager</string>
    <string name="brand">Brand</string>
    <string name="add_new_car">Add new vehicle</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="engine">Engine</string>
    <string name="model">Model</string>
    <string name="cancel">Cancel</string>
    <string name="add_car">Add vehicle</string>

    <string name="car_title" translatable="false">%1$s %2$s</string>


    <string name="car_icon">Vehicle icon</string>
    <string name="add_new_refueling">Add new refueling</string>
    <string name="litres">Litres</string>
    <string name="place">Place</string>
    <string name="odometer_reading">Odometer reading</string>
    <string name="price">Price</string>
    <string name="add_refueling">Add refueling</string>


    <string name="delete_item">Delete item</string>
    <string name="edit_car">Edit vehicle</string>
    <string name="update">Update</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share</string>
    <string name="share_message">I bought fuel in %1$s for %2$s %3$s</string>
    <string name="share_message_no_input">I bought fuel.</string>
    <string name="navigation_header">Navigation header</string>
    <string name="our_apps">Our Apps</string>
    <string name="cannot_open_our_apps">Your phone cannot open web page or Google Play Store</string>
    <string name="tank_state">Tank state in %</string>
    <string name="selected_car">Selected vehicle:</string>


    <string name="litres_format">%1$s%4$s for <b>%2$s</b> %5$s. Total price %3$s %5$s</string>
    <string name="date_place_format" translatable="false"><i>%1$s - %2$s</i></string>
    <string name="date_format" translatable="false"><i>%1$s</i></string>

    <string name="odometer_reading_format">Odometer reading: %1$s%3$s with tank state %2$d%%</string>
    <string name="detail_fragment_title">Refueling details</string>
    <string name="car_fragment_title">Select vehicle</string>
    <string name="refueling_1_fragment_title">Selected vehicle refueling</string>
    <string name="refueling_many_fragment_title">Selected vehicles refueling</string>
    <string name="help_fragment_title">Help</string>
    <string name="chart_title">"Fuel price "</string>
    <string name="y_axis_title">Price for 1 %1$s of fuel</string>
    <string name="tank_size">Tank Size</string>
    <string name="fuel_efficiency">Fuel efficiency</string>
    <string name="y_axis_title_efficiency">%1$s per 1 %2$s of fuel</string>
    <string name="odometer_reading_km" translatable="false">%1$s km</string>
    <string name="info_charts_cannot_display">To see charts and statistics You have to add at least three refueling</string>
    <string name="fuel_cost">Fuel cost</string>
    <string name="statistic">Statistic</string>
    <string name="help_info">Help and Info</string>
    <string name="cart_fragment_title">Statistic</string>
    <string name="delete_car">Delete vehicle</string>
    <string name="warning_delete">Are you sure? The changes could not be rolled back!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_refueling">Delete refueling</string>

    <string name="settings">Settings</string>
    <string name="cannot_select_car">You can select up to 8 vehicles</string>
    <string name="currency">Currency</string>
    <string name="currency_default">€</string>
    <string name="volume_unit">Volume unit</string>
    <string name="volume_unit_default">l.</string>
    <string name="length_unit">Length unit</string>
    <string name="length_unit_default">Km</string>
    <string name="restore_default_settings">Restore default settings</string>
    <string name="warning_default_settings">Are You sure about restoring default settings?</string>
    <string name="edit_confirmation">Save changes?</string>
    <string name="edit_dialog_message">Do You want to update refueling? Changes cannot be rolled back</string>
    <string name="all_cars">All cars</string>
    <string name="cannot_show_any_statistics">Cannot show any statistics. Selected vehicles don\'t have any added refueling.</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="no_refueling_in_data_range">There isn\'t any refueling in selected data range</string>
    <string name="numbers_refueling">Numbers of refueling: %1$d</string>
    <string name="total_sum">Total price: %1$s %2$s</string>
    <string name="total_litres">Total fuel bought: %1$s %2$s</string>
    <string name="most_expensive">The most expensive refueling: %1$s %2$s</string>
    <string name="cheapest_refueling">Cheapest refueling: %1$s %2$s</string>
    <string name="average_price">Average price for 1%1$s of fuel: %2$s %3$s</string>
    <string name="brand_cannot_empty">Brand name cannot be empty</string>
    <string name="model_cannot_empty">Model cannot be empty</string>
    <string name="tank_size_cannot_empty">Tank size cannot be empty</string>
    <string name="tank_size_wrong_format">Tank size is in wrong format</string>
    <string name="car_edited">Vehicle edited</string>
    <string name="car_added">Vehicle added</string>
    <string name="success_code" translatable="false">success_code</string>
    <string name="volume_empty">Volume value cannot be empty</string>
    <string name="volume_wrong_format">Volume is in wrong format</string>
    <string name="price_empty">Price cannot be empty</string>
    <string name="price_wrong_format">Price is in wrong format</string>
    <string name="tank_state_empty">Tank state cannot be empty</string>
    <string name="tank_state_outside_range">State of fuel tank is expressed as a percentage and its value must be between 0 and 100</string>
    <string name="odometer_reading_empty">Odometer reading cannot be empty</string>
    <string name="odometer_reading_wrong_format">Odometer reading is in wrong format</string>
    <string name="refueling_added">Refueling added</string>
    <string name="refueling_edited">Refueling edited</string>
    <string name="volume">Volume</string>
    <string name="app_page" translatable="false">https://play.google.com/store/apps/developer?id=MyniProjects</string>

    <string name="help_text_format" translatable="false"><![CDATA[
    <big><b> &#8226; %1$s </b></big> <br/> <br/>
    &nbsp;&nbsp;&nbsp; <i> %2$s </i>
    ]]></string>


    <string-array name="help_titles">
        <item>What this app can do?</item>
        <item>Adding new vehicle</item>
        <item>Editing vehicle</item>
        <item>Deleting vehicle</item>
        <item>Selecting vehicle</item>
        <item>Adding refueling</item>
        <item>Editing refueling</item>
        <item>Editing refueling</item>
        <item>Charts</item>
        <item>Fuel efficiency chart</item>
        <item>Statistics</item>
        <item>Settings</item>
        <item>Credits</item>
    </string-array>

    <string-array name="help_content">
        <item>This app can help to track refueling in Your vehicles. After adding several refueling You can check how much Your car consumes fuel, which fuel is more efficient, fuel prices in the selected date range, or how much do You spend on fuel. To get the most benefit from the app it is important to input correct data about Your refueling and add correct tank size while adding vehicle.</item>
        <item>To add a new vehicle click button in the bottom right corner. Brand, model, and tank size are required.</item>
        <item>To edit existing vehicle hold vehicle signature and You will see edit window.</item>
        <item>To delete existing vehicle swap vehicle signature to the right and You will see delete button on the left of the car.</item>
        <item>To select a vehicle just click on the signature. If You want to inspect refueling from more than one vehicle You can select them by sliding car signature in left. After selecting all wanted cars click the middle button at the bottom. You can select up to 8 vehicles and each will have different color differentiate them.</item>
        <item>To add refueling go to the selected vehicle and click on the button in the bottom right corner. Volume, price, odometer reading, and tank state are required. If You select more than vehicle You can choose to which You want to add refueling.</item>
        <item>To edit refueling click on refueling which You want to edit and You will go to detail fragment where You can edit it.</item>
        <item>In the detail fragment You can share Your refueling if You want to let someone know where and for what price You found fuel.</item>
        <item>To see charts select car and click on the button in the top right corner, next to car signature. Then pick one chart that You want to see. (currently, our app can show charts for only one car at one moment)</item>
        <item>This chart shows how many kilometers can You drive on 1 liter of fuel. If the fuel quality drops (or worse, Your eco-driving skills), the graph will show that.</item>
        <item>To see statistics of all cars just select Statistic from the left panel menu or top menu (3 dots). If You want to get statistic from selected vehicles just select them by sliding to the left and after selecting all click first button on the bottom (the on with loupe).</item>
        <item>In settings You can change currency, volume unit, length unit, or dark mode. To apply changes click on the disk button at the right bottom of the screen. To restore default settings click the first button on the bottom of the screen with gear.</item>
        <item>All these beautiful images and icons come from flaticon.com. Thanks! &#x1F49A;</item>
    </string-array>

</resources>