<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_new_car"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edTxtBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="brand"
        android:hint="@string/brand"
        android:inputType="text" />

    <EditText
        android:id="@+id/edTxtModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="model"
        android:hint="@string/model"
        android:inputType="text" />

    <EditText
        android:id="@+id/edTxtEngine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="engine"
        android:hint="@string/engine"
        android:inputType="text" />

    <EditText
        android:id="@+id/edTxtFuelType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="fuel"
        android:hint="@string/fuel_type"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="48dp"
        android:paddingEnd="48dp">

        <Button
            android:id="@+id/butAddCar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_shape"
            android:text="@string/add_car" />

        <Button
            android:id="@+id/butCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_shape"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>