<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_new_car"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/add_new_refueling"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edTxtLitres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/litres"
                android:hint="@string/litres"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edTxtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/price"
                android:hint="@string/price"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edTxtOdometerReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/odometer_reading"
                android:hint="@string/odometer_reading"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edTxtTankState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/tank_state"
                android:hint="@string/tank_state"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edTxtPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/place"
                android:hint="@string/place"
                android:inputType="textAutoComplete"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edTxtComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/comment"
                android:hint="@string/comment"
                android:inputType="textAutoComplete"
                android:singleLine="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/new_car_back_bottom">

            <Button
                android:id="@+id/butAddRefueling"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/button_dialog_shape"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/add_refueling"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/butCancelRef"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/button_dialog_shape"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/butAddRefueling" />


            <Spinner
                android:id="@+id/spinnerCars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView

                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/selected_car"
                android:textSize="18sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.35"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>


