<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.settings.SettingsFragment">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_height"
                    android:layout_margin="6dp"
                    android:background="@drawable/gradient_refueling">

                    <ImageView
                        android:id="@+id/imgCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/currency"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/currency" />

                    <TextView
                        android:id="@+id/txtCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/currency"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edTxtCurrency"
                        app:layout_constraintStart_toEndOf="@+id/imgCurrency"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edTxtCurrency"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:autofillHints="@string/currency"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/currency_default"
                        android:inputType="text"
                        android:maxLength="3"
                        android:textColor="@color/colorFont"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_height"
                    android:layout_margin="6dp"
                    android:background="@drawable/gradient_refueling">

                    <ImageView
                        android:id="@+id/imgVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/volume_unit"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/volume_unit" />

                    <TextView
                        android:id="@+id/txtVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/volume_unit"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edTxtVolume"
                        app:layout_constraintStart_toEndOf="@+id/imgVolume"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edTxtVolume"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="16dp"
                        android:autofillHints="@string/currency"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/volume_unit_default"
                        android:inputType="text"
                        android:maxLength="3"
                        android:textColor="@color/colorFont"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_height"
                    android:layout_margin="6dp"
                    android:background="@drawable/gradient_refueling">

                    <ImageView
                        android:id="@+id/imgLength"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/length_unit"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/length_unit" />

                    <TextView
                        android:id="@+id/txtLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/length_unit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edTxtLength"
                        app:layout_constraintStart_toEndOf="@+id/imgLength"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edTxtLength"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:autofillHints="@string/currency"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/length_unit_default"
                        android:inputType="text"
                        android:maxLength="3"
                        android:textColor="@color/colorFont"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextFields" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_height"
                    android:layout_margin="6dp"
                    android:background="@drawable/gradient_refueling">


                    <ImageView
                        android:id="@+id/imgDarkMode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/dark_mode"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/dark_mode" />

                    <Switch
                        android:id="@+id/switchDarkMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgDarkMode"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/butSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>